[#7919] make active-drag box fix its container dimensions just right, and no extra space from container

--- a/Allura/allura/public/nf/css/navbar.css
+++ b/Allura/allura/public/nf/css/navbar.css
@@ -41,7 +41,6 @@
 
 #top_nav_admin {
     overflow: hidden;
-    min-height: 44px;
     width: 918px; /* 940px - 32px for toggle-admin-btn */
 }
 
@@ -87,7 +86,7 @@
     border: 3px dashed #9e9e9e;
     background: #c9c9c9;
     width: 5rem; /* dynamic would be nice */
-    height: 24px;
+    height: 30px;
 }
 
 .react-reorderable-item-active div {
@@ -130,11 +129,6 @@
     margin-left: 2px;
 }
 
-.add-tool-toggle:hover {
-    background: #F4F4F4;
-    color: #777;
-}
-
 .add-tool-field {
     width: 50%;
 }
@@ -160,6 +154,7 @@
     border: 3px dashed #9e9e9e;
     background: #c9c9c9;
     width: 100%;
+    width: calc(100% - 6px);
     height: 24px;
 }
 
@@ -375,11 +370,14 @@
     background: #333;
 }
 
+#top_nav #add-tool-container {
+    padding-bottom: 0;
+}
 #top_nav .add-tool-toggle {
     border: 1px dashed #B9B9B9;
     color: #0077aa;
     padding: 3px 7px;
-    margin-top: -3px;
+    margin-top: -4px;
     height: 100%;
     float: right;
     border-radius: 2px;
@@ -393,6 +391,7 @@
 
 #top_nav .add-tool-toggle:hover {
     color: #0099cc;
+    background: #F4F4F4;
     text-decoration: underline;
 }
 
